# rbk-db

./: .copier-answers.yml  .gitignore  Cargo.toml  LICENSE  README.md  justfile
.github/workflows/: ci.yml
src/: commands.rs  database.rs  lib.rs  main.rs  rebrickable.rs  types.rs
src/commands/: completion.rs  dump.rs
src/database/: indexes.sql  schema.sql
src/database/migrations/: V01__init.sql
src/rebrickable/: client.rs  record.rs
src/rebrikable/: client.rs  record.rs  table.rs
