[package]
name = "rbk-db"
version = "0.1.0"
edition = "2021"
description = "Import the Rebrickable LEGO database into SQLite."
repository = "https://github.com/vivienm/rbk-db"
license = "MIT"
publish = false

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.45", features = ["cargo", "derive", "env"] }
clap_complete = "4.5.57"
csv = "1.3.1"
flate2 = "1.1.2"
refinery = { version = "0.8.16", features = ["rusqlite"] }
reqwest = "0.12.23"
rusqlite = { version = "0.31.0", features = ["bundled"] }
serde = { version = "1.0.219", features = ["derive"] }
tempfile = "3.20.0"
tokio = { version = "1.47.1", features = ["fs", "macros", "rt"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
url = { version = "2.5.4", features = ["serde"] }
