[package]
name = "rbk-db"
version = "0.1.0"
edition = "2024"
description = "Import the Rebrickable LEGO database into SQLite."
repository = "https://github.com/vivienm/rbk-db"
license = "MIT"
publish = false

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["cargo", "derive", "env"] }
clap_complete = "4.6.5"
csv = "1.4.0"
flate2 = "1.1.9"
reqwest = "0.13.3"
rusqlite = { version = "0.39.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
tempfile = "3.27.0"
tokio = { version = "1.52.3", features = ["fs", "macros", "rt"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
url = { version = "2.5.8", features = ["serde"] }
